## automake.am
##
## Automake.am for GlassCoder src/common
##
##   (C) Copyright 2015-2016 Fred Gleason <fredg@paravelsystems.com>
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as
##   published by the Free Software Foundation; either version 2 of
##   the License, or (at your option) any later version.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
## Use automake to process this into a Makefile.in

EXTRA_DIST = asihpi.cpp asihpi.h\
             audiodevice.cpp audiodevice.h\
             cmdswitch.cpp cmdswitch.h\
             codec.cpp codec.h\
             codecdialog.cpp codecdialog.h\
             codeviewer.cpp codeviewer.h\
             combobox.cpp combobox.h\
             connector.cpp connector.h\
             glasslimits.h\
             guiapplication.cpp guiapplication.h\
             hpiinputlistview.cpp hpiinputlistview.h\
             hpiwidget.cpp hpiwidget.h\
             logging.cpp logging.h\
             messagewidget.cpp messagewidget.h\
             metaevent.cpp metaevent.h\
             paths.h.in\
             profile.cpp profile.h\
             ringbuffer.cpp ringbuffer.h\
             segmeter.cpp segmeter.h\
             serverdialog.cpp serverdialog.h\
             sourcedialog.cpp sourcedialog.h\
             spinbox.cpp spinbox.h\
             statuswidget.cpp statuswidget.h\
             stereometer.cpp stereometer.h\
             streamdialog.cpp streamdialog.h

CLEANFILES = *~\
             *.idb\
             *ilk\
             *.obj\
             *.pdb\
             *.qm\
             moc_*\
             paths.h

MAINTAINERCLEANFILES = *~\
                       *.tar.gz\
                       aclocal.m4\
                       configure\
                       Makefile.in\
                       moc_*
